fix(YALB-1186): Test wrapping views-basic in #drupal-off-canvas-wrapper, if this works, change all of them

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_views_basic/assets/css/views-basic.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_views_basic/assets/css/views-basic.css
@@ -3,7 +3,7 @@
 */
 
 /* General styles */
-.views-basic--params {
+#drupal-off-canvas-wrapper .views-basic--params {
   display: none;
 }
 
